<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.6.11</version>
        <relativePath/>
    </parent>
    <groupId>com.kyowon.sms</groupId>
    <artifactId>sms-wells-back-app</artifactId>
    <version>1.0.0</version>
    <name>sms-wells-back-app</name>
    <description>영업관리 wells Backend</description>
    <packaging>war</packaging>

    <properties>
        <app.profiles>local</app.profiles>

        <!-- 프로젝트 정보 -->
        <sonar.projectKey>sms-wells-back-app</sonar.projectKey>
        <sonar.projectName>sms-wells-back-app</sonar.projectName>
        <sonar.projectVersion>1.0.0</sonar.projectVersion>

        <!-- 소스 코드 정보 -->
        <sonar.sources>src/main/java</sonar.sources>
        <sonar.java.binaries>target/classes</sonar.java.binaries>
        <sonar.java.source>17</sonar.java.source>
        <sonar.sourceEncoding>UTF-8</sonar.sourceEncoding>

        <project.build.sourceEncoding>UTF-8
        </project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8
        </project.reporting.outputEncoding>

        <java.version>17</java.version>
        <lombok.version>1.18.24</lombok.version>
        <mapstruct.version>1.5.2.Final</mapstruct.version>

        <org.aspectj-version>1.9.8</org.aspectj-version>
        <maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
        <tomcat.version>9.0.46</tomcat.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.sds.sflex</groupId>
            <artifactId>sflex-back-library</artifactId>
            <version>2.0.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>com.sds.sflex</groupId>
            <artifactId>sflex-back-portal</artifactId>
            <version>2.0.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>com.sds.sflex</groupId>
            <artifactId>sflex-back-common</artifactId>
            <version>2.0.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>com.sds.sflex</groupId>
            <artifactId>sflex-back-bulletin</artifactId>
            <version>2.0.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>com.sds.sflex</groupId>
            <artifactId>sflex-back-push</artifactId>
            <version>2.0.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>com.sds.sflex</groupId>
            <artifactId>sflex-back-kyowon</artifactId>
            <version>1.0.0-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>com.kyowon.sms</groupId>
            <artifactId>sms-common-back-mod</artifactId>
            <version>1.0.0-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>com.kyowon.sms</groupId>
            <artifactId>sms-wells-back-mod</artifactId>
            <version>1.0.0-SNAPSHOT</version>
        </dependency>

        <!-- SSO Library -->
        <dependency>
            <groupId>com.ubintis</groupId>
            <artifactId>passni-sso-agent</artifactId>
            <version>4.0.005</version>
        </dependency>

        <dependency>
            <groupId>com.ubintis</groupId>
            <artifactId>passni-sso-agent-external-lib</artifactId>
            <version>1.0</version>
        </dependency>

        <dependency>
            <groupId>com.ubintis</groupId>
            <artifactId>PniccJNI</artifactId>
            <version>1.1</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${java.version}</source> <!-- depending on your project -->
                    <target>${java.version}</target> <!-- depending on your project -->
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>${mapstruct.version}</version>
                        </path>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok-mapstruct-binding</artifactId>
                            <version>0.2.0</version>
                        </path>
                    </annotationProcessorPaths>
                    <compilerArgs>
                        <compilerArg>
                            -Amapstruct.unmappedTargetPolicy=IGNORE
                        </compilerArg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.8</version>
                <configuration>
                    <excludes>
                        <exclude>com/sds/sflex/**/dvo/*DVO</exclude>
                        <exclude>com/sds/sflex/**/dvo/*Dvo</exclude>
                        <exclude>com/sds/sflex/**/dto/*Dto</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <id>pre-unit-test</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                        <configuration>
                            <destFile>${project.build.directory}/coverage-reports/jacoco-ut.exec
                            </destFile>
                            <propertyName>surefireArgLine</propertyName>
                        </configuration>
                    </execution>
                    <execution>
                        <id>post-unit-test</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                        <configuration>
                            <dataFile>${project.build.directory}/coverage-reports/jacoco-ut.exec
                            </dataFile>
                            <outputDirectory>${project.reporting.outputDirectory}/jacoco-ut
                            </outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.19.1</version>
                <configuration>
                    <!--suppress UnresolvedMavenProperty -->
                    <argLine>${surefireArgLine} --add-opens=java.base/java.util=ALL-UNNAMED
                        --add-opens=java.base/java.lang=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <profiles>${app.profiles}</profiles>
                    <jvmArguments>--add-opens=java.base/java.util=ALL-UNNAMED
                        --add-opens=java.base/java.lang=ALL-UNNAMED
                    </jvmArguments>
                </configuration>
                <executions>
                    <execution>
                        <id>repackage</id>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                        <configuration>
                            <classifier>exec</classifier>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <configuration>
                    <warSourceDirectory>src/main/webapp
                    </warSourceDirectory>
                    <packagingExcludes>
                        WEB-INF/lib/tomcat-embed-*.jar
                    </packagingExcludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.8.2</version>
            </plugin>
        </plugins>
    </build>
    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-report-plugin</artifactId>
                <version>3.0.0-M7</version>
            </plugin>
        </plugins>
    </reporting>

</project>
